--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="/"><img src="./assets/amazon_logo.png" alt="" width="100px">
+        <a href="/"><img src="assets/amazon_logo.png" alt="" width="100px">
         </a>
         <div class="nav-country">
-            <img src="./assets/location_icon.png" height="20" alt="">
+            <img src="assets/location_icon.png" height="20" alt="">
             <div>
                 <p>Deliver to</p>
                 <h1>United Kingdom</h1>
@@ -21,21 +21,21 @@
         <div class="nav-search">
             <div class="nav-search-category">
                 <p>All</p>
-                <img src="./assets/dropdown_icon.png" height="12" alt="">
+                <img src="assets/dropdown_icon.png" height="12" alt="">
             </div>
             <input type="text" class="nav-search-input" placeholder="Search Amazon">
-            <img src="./assets/search_icon.png" class="nav-search-icon" alt="">
+            <img src="assets/search_icon.png" class="nav-search-icon" alt="">
         </div>
 
         <div class="nav-language">
-            <img src="./assets/us_flag.png" width="25px" alt="">
+            <img src="assets/us_flag.png" width="25px" alt="">
             <p>EN</p>
-            <img src="./assets/dropdown_icon.png" width="8px" alt="">
+            <img src="assets/dropdown_icon.png" width="8px" alt="">
         </div>
 
         <div class="nav-text">
             <p>Hello, Sign In</p>
-            <h1>Account & Lists <img src="./assets/dropdown_icon.png" width="8px" alt=""></h1>
+            <h1>Account & Lists <img src="assets/dropdown_icon.png" width="8px" alt=""></h1>
         </div>
 
         <div class="nav-text">
@@ -43,14 +43,14 @@
             <h1>& Orders</h1>
         </div>
         <a href="" class="nav-cart">
-            <img src="./assets/cart_icon.png" width="35px" alt="">
+            <img src="assets/cart_icon.png" width="35px" alt="">
             <h4>Cart</h4>
         </a>
     </nav>
 
     <div class="nav-bottom">
         <div>
-            <img src="./assets/menu_icon.png" width="25px" alt="">
+            <img src="assets/menu_icon.png" width="25px" alt="">
             <p>All</p>
         </div>
         <p>Today's Deal</p>
@@ -64,34 +64,34 @@
         <a href="#" class="control_prev">&#129144</a>
         <a href="#" class="control_next">&#129146</a>
         <ul>
-            <img src="./assets/header1.jpg" class="header-img" alt="">
-            <img src="./assets/header2.jpg" class="header-img" alt="">
-            <img src="./assets/header3.jpg" class="header-img" alt="">
-            <img src="./assets/header4.jpg" class="header-img" alt="">
-            <img src="./assets/header5.jpg" class="header-img" alt="">
-            <img src="./assets/header6.jpg" class="header-img" alt="">
+            <img src="assets/header1.jpg" class="header-img" alt="">
+            <img src="assets/header2.jpg" class="header-img" alt="">
+            <img src="assets/header3.jpg" class="header-img" alt="">
+            <img src="assets/header4.jpg" class="header-img" alt="">
+            <img src="assets/header5.jpg" class="header-img" alt="">
+            <img src="assets/header6.jpg" class="header-img" alt="">
         </ul>
     </div>
 
     <div class="box-row header-box">
         <div class="box-col">
             <h3>Free international returns</h3>
-            <img src="./assets/box1-1.jpg" alt="">
+            <img src="assets/box1-1.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Lunar New Year</h3>
-            <img src="./assets/box1-2.jpg" alt="">
+            <img src="assets/box1-2.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Toy Under $25</h3>
-            <img src="./assets/box1-3.jpg" alt="">
+            <img src="assets/box1-3.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Deals In PC's</h3>
-            <img src="./assets/box1-4.jpg" alt="">
+            <img src="assets/box1-4.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
     </div>
@@ -99,22 +99,22 @@
     <div class="box-row">
         <div class="box-col">
             <h3>Grooming Products</h3>
-            <img src="./assets/box2-1.jpg" alt="">
+            <img src="assets/box2-1.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Latest Devices</h3>
-            <img src="./assets/box2-2.jpg" alt="">
+            <img src="assets/box2-2.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Pets Food</h3>
-            <img src="./assets/box2-3.jpg" alt="">
+            <img src="assets/box2-3.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Fashion Mart</h3>
-            <img src="./assets/box2-4.jpg" alt="">
+            <img src="assets/box2-4.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
     </div>
@@ -123,41 +123,41 @@
     <div class="products-slider">
         <h2>Best Sellers in Sports & Outdoors</h2>
         <div class="products">
-            <a href="/product.html">
-                <img src="./assets/product_img.jpg" alt="">
+            <a href="product.html">
+                <img src="assets/product_img.jpg" alt="">
             </a>
-            <img src="./assets/product1-1.jpg" alt="">
-            <img src="./assets/product1-2.jpg" alt="">
-            <img src="./assets/product1-3.jpg" alt="">
-            <img src="./assets/product1-4.jpg" alt="">
-            <img src="./assets/product1-5.jpg" alt="">
-            <img src="./assets/product1-6.jpg" alt="">
-            <img src="./assets/product1-7.jpg" alt="">
-            <img src="./assets/product1-8.jpg" alt="">
-            <img src="./assets/product1-9.jpg" alt="">
-            <img src="./assets/product1-10.jpg" alt="">
+            <img src="assets/product1-1.jpg" alt="">
+            <img src="assets/product1-2.jpg" alt="">
+            <img src="assets/product1-3.jpg" alt="">
+            <img src="assets/product1-4.jpg" alt="">
+            <img src="assets/product1-5.jpg" alt="">
+            <img src="assets/product1-6.jpg" alt="">
+            <img src="assets/product1-7.jpg" alt="">
+            <img src="assets/product1-8.jpg" alt="">
+            <img src="assets/product1-9.jpg" alt="">
+            <img src="assets/product1-10.jpg" alt="">
         </div>
     </div>
 
     <div class="box-row">
         <div class="box-col">
             <h3>Stationery</h3>
-            <img src="./assets/box3-1.jpg" alt="">
+            <img src="assets/box3-1.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Laptops For Study</h3>
-            <img src="./assets/box3-2.jpg" alt="">
+            <img src="assets/box3-2.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Office Chairs</h3>
-            <img src="./assets/box3-3.jpg" alt="">
+            <img src="assets/box3-3.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Gaming Monitors</h3>
-            <img src="./assets/box3-4.jpg" alt="">
+            <img src="assets/box3-4.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
     </div>
@@ -167,7 +167,7 @@
             <div class="products">
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-1.jpg" alt="">
+                        <img src="assets/product2-1.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-2.jpg" alt="">
+                        <img src="assets/product2-2.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-3.jpg" alt="">
+                        <img src="assets/product2-3.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-4.jpg" alt="">
+                        <img src="assets/product2-4.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-5.jpg" alt="">
+                        <img src="assets/product2-5.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-6.jpg" alt="">
+                        <img src="assets/product2-6.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-7.jpg" alt="">
+                        <img src="assets/product2-7.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -237,7 +237,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-8.jpg" alt="">
+                        <img src="assets/product2-8.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-9.jpg" alt="">
+                        <img src="assets/product2-9.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -257,7 +257,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-10.jpg" alt="">
+                        <img src="assets/product2-10.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -267,7 +267,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-img-container">
-                        <img src="./assets/product2-11.jpg" alt="">
+                        <img src="assets/product2-11.jpg" alt="">
                     </div>
                     <div class="product-offer">
                         <p>27% off</p> <span>Deal</span>
@@ -283,16 +283,16 @@
     <div class="products-slider">
         <h2>Best Sellers in Sports & Outdoors</h2>
         <div class="products">
-            <img src="./assets/product1-1.jpg" alt="">
-            <img src="./assets/product1-2.jpg" alt="">
-            <img src="./assets/product1-3.jpg" alt="">
-            <img src="./assets/product1-4.jpg" alt="">
-            <img src="./assets/product1-5.jpg" alt="">
-            <img src="./assets/product1-6.jpg" alt="">
-            <img src="./assets/product1-7.jpg" alt="">
-            <img src="./assets/product1-8.jpg" alt="">
-            <img src="./assets/product1-9.jpg" alt="">
-            <img src="./assets/product1-10.jpg" alt="">
+            <img src="assets/product1-1.jpg" alt="">
+            <img src="assets/product1-2.jpg" alt="">
+            <img src="assets/product1-3.jpg" alt="">
+            <img src="assets/product1-4.jpg" alt="">
+            <img src="assets/product1-5.jpg" alt="">
+            <img src="assets/product1-6.jpg" alt="">
+            <img src="assets/product1-7.jpg" alt="">
+            <img src="assets/product1-8.jpg" alt="">
+            <img src="assets/product1-9.jpg" alt="">
+            <img src="assets/product1-10.jpg" alt="">
         </div>
     </div>
 
@@ -300,22 +300,22 @@
     <div class="box-row">
         <div class="box-col">
             <h3>Stationery</h3>
-            <img src="./assets/box3-1.jpg" alt="">
+            <img src="assets/box3-1.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Laptops For Study</h3>
-            <img src="./assets/box3-2.jpg" alt="">
+            <img src="assets/box3-2.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Office Chairs</h3>
-            <img src="./assets/box3-3.jpg" alt="">
+            <img src="assets/box3-3.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
         <div class="box-col">
             <h3>Gaming Monitors</h3>
-            <img src="./assets/box3-4.jpg" alt="">
+            <img src="assets/box3-4.jpg" alt="">
             <a href="/">Shop More</a>
         </div>
     </div>
@@ -323,7 +323,7 @@
 
 
     <footer>
-        <img src="./assets/amazon_logo.png" width="100" alt="">
+        <img src="assets/amazon_logo.png" width="100" alt="">
         <p>&copy; 1996-2024, Amazon.com, Inc. or its affiliates</p>
     </footer>
 
